Mon Jul 15 16:44:24 2002  George Lebl <jirka@5z.com>

	* config/locale.alias: remove the "English" entry, the other two
	  english ones will suffice.  Also do a bit of renameing, although
	  this does not break any user visible strings.  We really need some
	  nice way of getting currently installed locales instead of this
	  file.  And we need to have the locale translation table understand
	  many many more locales.  Oh well.

Mon Jul 15 15:47:11 2002  George Lebl <jirka@5z.com>

	* daemon/errorgui.c, daemon/misc.[ch], daemon/server.c,
	  daemon/slave.c:  Clean up the comm stuff to only use unbuffered
	  libc functions.  This might fix the freebsd issues perhaps,
	  maybe.  Also fix some almost impossible to happen races.

Mon Jul 15 14:55:27 2002  George Lebl <jirka@5z.com>

	* NEWS, configure.in: prepare for 2.4.0.2

Sat Jul 13 17:03:15 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.in: use "." instead of "source" as I didn't realize
	  that "source" is not on the freebsd /bin/sh

Fri Jul 12 14:17:54 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.in: source in /etc/profile if it exists.  This way we
	  really do get system wide environment for gdm.

Fri Jul 12 10:06:23 2002  George Lebl <jirka@5z.com>

	* **/*.desktop.in:  Add "Encoding=UTF-8"

Fri Jul 12 09:38:24 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.c: ensure descriptors 0,1 and 2 exist.  This may fix
	  an issue running gdm out of /etc/ttys on freebsd.

Thu Jul 11 17:50:15 2002  George Lebl <jirka@5z.com>

	* gui/gdmwm.c: unfortunately when we do a reparent on an already
	  mapped window we will get an unmap and a map, so we ignore the
	  next unmap/map.  Also fix a crash in moving override redirect
	  windows (windows gdmwm doesn't know)

	* gui/gdmlogin.c: move the g_atexit to the place where we run the
	  background prog

Thu Jul 11 15:15:42 2002  George Lebl <jirka@5z.com>

	* gui/gdmflexiserver.c: corrected yodaspeak and thus #83077

Thu Jul 11 13:33:41 2002  George Lebl <jirka@5z.com>
