@@ -73,6 +73,8 @@ void gdm_desetuid (void);
 
 gboolean gdm_test_opt (const char *cmd, const char *help, const char *option);
 
+void gdm_close_all_descriptors (int from, int except);
+
 #endif /* GDM_MISC_H */
 
 /* EOF */
